--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty   # needed for HarfBuzz
 language: c
 
 compiler:
-  - clang
+  - #clang
   - gcc
 
 before_script:
@@ -13,12 +13,12 @@ before_script:
   - sudo apt-key update -q
   - sudo apt-get update -q
   - sudo apt-get install --only-upgrade autoconf
-  - sudo apt-get install -y libraqm-dev libfreetype6-dev libharfbuzz-dev libfribidi-dev
+  - sudo apt-get install -y libraqm-dev libfreetype6-dev libharfbuzz-dev libfribidi-dev libperl-dev graphviz-dev libgraphviz-dev autotrace-dev libwmf-dev
 
 script:
   - export OMP_NUM_THREADS=1
   - export CFLAGS="-Wno-deprecated-declarations -Wdeclaration-after-statement -Wno-error=unused-variable"
-  - ./configure --disable-openmp --with-quantum-depth=16 --enable-hdri=no --without-perl --prefix=/usr
+  - ./configure --with-rsvg --with-wmf --with-modules --with-autotrace --with-x --enable-reproducible-build --enable-hdri --with-gvc --with-fpx --with-heic --with-raqm --with-gslib --with-perl --prefix=/usr
   - make -j$(nproc)
   - # Generate AppImage
   - make install DESTDIR=$(readlink -f appdir) ; find appdir/
