--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ compiler:
 before_script:
   - sudo add-apt-repository -y ppa:as-bahanta/raqm
   - sudo add-apt-repository ppa:dns/gnu -y
+  - sudo add-apt-repository ppa:aacid/openjp2trusty
+  - sudo add-apt-repository ppa:voxops/backports
   - sudo apt-key update -q
   - sudo apt-get update -q
   - sudo apt-get install --only-upgrade autoconf
