--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ compiler:
 
 before_script:
   - sudo add-apt-repository -y ppa:as-bahanta/raqm
-  - sudo add-apt-repository ppa:dns/gnu -y
-  - sudo add-apt-repository ppa:aacid/openjp2trusty
-  - sudo add-apt-repository ppa:voxops/backports
+  - sudo add-apt-repository -y ppa:dns/gnu
+  - sudo add-apt-repository -y ppa:aacid/openjp2trusty
+  - sudo add-apt-repository -y ppa:voxops/backports
   - sudo apt-key update -q
   - sudo apt-get update -q
   - sudo apt-get install --only-upgrade autoconf
