--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ before_script:
   - sudo add-apt-repository -y ppa:dns/gnu
   - sudo add-apt-repository -y ppa:aacid/openjp2trusty
   - sudo add-apt-repository -y ppa:voxops/backports
+  - sudo add-apt-repository -y ppa:dsci-admins/live
   - sudo apt-key update -q
   - sudo apt-get update -q
   - sudo apt-get install --only-upgrade autoconf
-  - sudo apt-get install -y libraqm-dev libfreetype6-dev libharfbuzz-dev libfribidi-dev libperl-dev graphviz-dev libgraphviz-dev libwmf-dev fftw-dev libraw-dev libopenraw-dev liblqr-1-0-dev libopenjpeg-dev libopenjp2-7-dev libpango1.0-dev libwebp-dev  # autotrace-dev?
+  - sudo apt-get install -y libpotrace-dev libraqm-dev libfreetype6-dev libharfbuzz-dev libfribidi-dev libperl-dev graphviz-dev libgraphviz-dev libwmf-dev fftw-dev libraw-dev libopenraw-dev liblqr-1-0-dev libopenjpeg-dev libopenjp2-7-dev libpango1.0-dev libwebp-dev  # autotrace-dev?
 
 script:
   - export OMP_NUM_THREADS=1
