--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - sudo add-apt-repository -y ppa:as-bahanta/raqm
   - sudo add-apt-repository -y ppa:dns/gnu
   - sudo add-apt-repository -y ppa:aacid/openjp2trusty
-  - sudo add-apt-repository -y ppa:voxops/backports
+  - #sudo add-apt-repository -y ppa:voxops/backports
   - sudo add-apt-repository -y ppa:dsci-admins/live
   - sudo apt-key update -q
   - sudo apt-get update -q
