--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_script:
   - sudo add-apt-repository -y ppa:as-bahanta/raqm
   - sudo add-apt-repository -y ppa:dns/gnu
   - sudo add-apt-repository -y ppa:aacid/openjp2trusty
-  - sudo add-apt-repository -y ppa:opencpu/julia
-  - sudo add-apt-repository -y ppa:tuxpoldo/yeasoft-backports
+  - #sudo add-apt-repository -y ppa:opencpu/julia
+  - #sudo add-apt-repository -y ppa:tuxpoldo/yeasoft-backports
   - sudo add-apt-repository -y ppa:richardpuppy96/backports
   - sudo add-apt-repository -y ppa:twodopeshaggy/ppapackages
   - #sudo add-apt-repository -y ppa:voxops/backports
