--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty   # needed for HarfBuzz
 language: c
 
 compiler:
-  - #clang
+  - clang
   - gcc
 
 before_script:
@@ -24,9 +24,13 @@ before_script:
   - #sudo apt-get install -y libpotrace-dev libraqm-dev libfreetype6-dev libharfbuzz-dev libfribidi-dev libperl-dev graphviz-dev libgraphviz-dev libwmf-dev fftw-dev libraw-dev libopenraw-dev liblqr-1-0-dev libopenjpeg-dev libopenjp2-7-dev libpango1.0-dev libwebp-dev
 
 script:
-  - dpkg -l | grep -v "^ii  lib"    # Check to see what's there...
-  - dpkg -l | grep    "^ii  lib"    # Check to see what's there...
-  - dpkg -l | grep "^ii  " | wc -l  # How many packages have we installed?
+  - dpkg -l | grep    "^ii  lib[a-f]"    # Check to see what's there...
+  - dpkg -l | grep    "^ii  lib[g-k]"    # Check to see what's there...
+  - dpkg -l | grep    "^ii  lib[l-q]"    # Check to see what's there...
+  - dpkg -l | grep    "^ii  lib[r-z]"    # Check to see what's there...
+  - dpkg -l | grep    "^rc  "            # Check to see what's there...
+  - dpkg -l | grep -v "^ii  lib"         # Check to see what's there...
+  - dpkg -l | grep    "^ii  " | wc -l    # How many packages have we installed?
   - export OMP_NUM_THREADS=1
   - export CFLAGS="-Wno-deprecated-declarations -Wdeclaration-after-statement -Wno-error=unused-variable"
   - ./configure --with-rsvg --with-wmf --with-modules --with-autotrace --with-x --enable-reproducible-build --enable-hdri --with-gvc --with-fpx --with-heic --with-raqm --with-gslib --with-perl --with-dejavu-font-dir=/usr/share/fonts/truetype/dejavu --prefix=/usr
