--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,13 @@ script:
   - dpkg -l | grep    "^ii  lib[g-k]"    # Check to see what's there...
   - dpkg -l | grep    "^ii  lib[l-q]"    # Check to see what's there...
   - dpkg -l | grep    "^ii  lib[r-z]"    # Check to see what's there...
+  - dpkg -l | grep    "^ii  [a-h]"       # Check to see what's there...
+  - dpkg -l | grep    "^ii  [i-k]"       # Check to see what's there...
+  - dpkg -l | grep    "^ii  l[a-j]"      # Check to see what's there...
+  - dpkg -l | grep    "^ii  li[^b]"      # Check to see what's there...
+  - dpkg -l | grep    "^ii  l[k-z]"      # Check to see what's there...
+  - dpkg -l | grep    "^ii  [k-z]"       # Check to see what's there...
   - dpkg -l | grep    "^rc  "            # Check to see what's there...
-  - dpkg -l | grep -v "^ii  lib"         # Check to see what's there...
   - dpkg -l | grep    "^ii  " | wc -l    # How many packages have we installed?
   - export OMP_NUM_THREADS=1
   - export CFLAGS="-Wno-deprecated-declarations -Wdeclaration-after-statement -Wno-error=unused-variable"
