Smaller 'dpkg -l' chunks...

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ script:
   - dpkg -l | grep    "^ii  lib[g-k]"    # Check to see what's there...
   - dpkg -l | grep    "^ii  lib[l-q]"    # Check to see what's there...
   - dpkg -l | grep    "^ii  lib[r-z]"    # Check to see what's there...
-  - dpkg -l | grep    "^ii  [a-h]"       # Check to see what's there...
+  - dpkg -l | grep    "^ii  [a-f]"       # Check to see what's there...
+  - dpkg -l | grep    "^ii  [g-h]"       # Check to see what's there...
   - dpkg -l | grep    "^ii  [i-k]"       # Check to see what's there...
   - dpkg -l | grep    "^ii  l[a-j]"      # Check to see what's there...
   - dpkg -l | grep    "^ii  li[^b]"      # Check to see what's there...
