--- a/.travis.yml
+++ b/.travis.yml
@@ -24,19 +24,19 @@ before_script:
   - #sudo apt-get install -y libpotrace-dev libraqm-dev libfreetype6-dev libharfbuzz-dev libfribidi-dev libperl-dev graphviz-dev libgraphviz-dev libwmf-dev fftw-dev libraw-dev libopenraw-dev liblqr-1-0-dev libopenjpeg-dev libopenjp2-7-dev libpango1.0-dev libwebp-dev
 
 script:
-  - dpkg -l | grep    "^ii  lib[a-f]"    # Check to see what's there...
-  - dpkg -l | grep    "^ii  lib[g-k]"    # Check to see what's there...
-  - dpkg -l | grep    "^ii  lib[l-q]"    # Check to see what's there...
-  - dpkg -l | grep    "^ii  lib[r-z]"    # Check to see what's there...
-  - dpkg -l | grep    "^ii  [a-f]"       # Check to see what's there...
-  - dpkg -l | grep    "^ii  [g-h]"       # Check to see what's there...
-  - dpkg -l | grep    "^ii  [i-k]"       # Check to see what's there...
-  - dpkg -l | grep    "^ii  l[a-j]"      # Check to see what's there...
-  - dpkg -l | grep    "^ii  li[^b]"      # Check to see what's there...
-  - dpkg -l | grep    "^ii  l[k-z]"      # Check to see what's there...
-  - dpkg -l | grep    "^ii  [k-z]"       # Check to see what's there...
-  - dpkg -l | grep    "^rc  "            # Check to see what's there...
-  - dpkg -l | grep    "^ii  " | wc -l    # How many packages have we installed?
+  - dpkg -l | grep    "^ii  lib[a-f]" ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  lib[g-k]" ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  lib[l-q]" ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  lib[r-z]" ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  [a-f]"    ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  [g-h]"    ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  [i-k]"    ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  l[a-j]"   ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  li[^b]"   ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  l[k-z]"   ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  [k-z]"    ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^rc  "         ; sleep 1   # Check to see what's there...
+  - dpkg -l | grep    "^ii  " | wc -l ; sleep 1   # How many packages have we installed?
   - export OMP_NUM_THREADS=1
   - export CFLAGS="-Wno-deprecated-declarations -Wdeclaration-after-statement -Wno-error=unused-variable"
   - ./configure --with-rsvg --with-wmf --with-modules --with-autotrace --with-x --enable-reproducible-build --enable-hdri --with-gvc --with-fpx --with-heic --with-raqm --with-gslib --with-perl --with-dejavu-font-dir=/usr/share/fonts/truetype/dejavu --prefix=/usr
