--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,9 @@ script:
   - PATH=./squashfs-root/usr/bin:$PATH ./squashfs-root/usr/bin/appimagetool -g ./appdir/
   - find ./appdir -executable -type f -exec ldd {} \; | grep " => /usr" | cut -d " " -f 2-3 | sort | uniq
   - mv ./ImageMagick*.AppImage ./ImageMagick-xperimental.AppImage
-  - if [ "$TRAVIS_BRANCH" == "TRAVIS_TAG" ] ; then wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh ; bash upload.sh ImageMagick*AppImage* ; fi
+  - #if [ "$TRAVIS_BRANCH" == "TRAVIS_TAG" ] ; then 
+  - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh ; bash upload.sh ImageMagick*AppImage*
+  - #; fi
   - #if [ "$TRAVIS_BRANCH" != "TRAVIS_TAG" ] ; then 
   - curl --upload-file ./ImageMagick*.AppImage https://transfer.sh/ImageMagick-xperimental-x86_64.AppImage
   - #; fi
