--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_script:
   - sudo add-apt-repository -y ppa:twodopeshaggy/ppapackages    # 
   - #sudo add-apt-repository -y ppa:voxops/backports            # 
   - #sudo add-apt-repository -y ppa:dsci-admins/live            # 
+  - sudo add-apt-repository -y ppa:ximion/packagekit
   - sudo apt-key update -q
   - sudo apt-get update -q
   - sudo apt-get install --only-upgrade autoconf
