--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ script:
   - find coders    -type f
   - find config    -type f
   - rm ./appdir/AppRun ; cp appimage/AppRun appdir/ ; chmod a+x ./appdir/AppRun # Replace symlink with custom script
-  - PATH=./squashfs-root/usr/bin:$PATH ./squashfs-root/usr/bin/appimagetool -v -u 'gh-releases-zsync|KurtPfeifle|ImageMagick|continuous|ImageMagick-*x86_64.AppImage.zsync' -n ./appdir/
+  - PATH=./squashfs-root/usr/bin:$PATH ./squashfs-root/usr/bin/appimagetool -v -u 'gh-releases-zsync|KurtPfeifle|ImageMagick|continuous|ImageMagick-*x86_64.AppImage.zsync' ./appdir/
   - find ./appdir -executable -type f -exec ldd {} \; | grep " => /usr" | cut -d " " -f 2-3 | sort | uniq
   - mv ./ImageMagick*.AppImage ./ImageMagick-xperimental-x86_64.AppImage
   - cp ./ImageMagick-xperimental{,-$(git rev-parse --short HEAD)}-x86_64.AppImage
@@ -85,3 +85,4 @@ script:
   - find . -name "ImageMagick-*.AppImage*"
 
 after_success:
+
