--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ script:
   - ls -l appdir
   - readlink -f appdir
   - make install DESTDIR=$(readlink -f appdir)
-  - find appdir/
+  - find appdir/ -type d
   - find . -name "*.xml"
   - find . -type d -name share
   - cd appdir/usr/lib/ImageMagick-7.0.7/config-Q16HDRI ; ln -s ../../../etc/ImageMagick-7/*.xml . ; cd -
@@ -72,20 +72,20 @@ script:
   - PATH=./squashfs-root/usr/bin:$PATH ./squashfs-root/usr/bin/appimagetool -v -u 'gh-releases-zsync|KurtPfeifle|ImageMagick|continuous|ImageMagick-*x86_64.AppImage.zsync' -n ./appdir/
   - find ./appdir -executable -type f -exec ldd {} \; | grep " => /usr" | cut -d " " -f 2-3 | sort | uniq
   - mv ./ImageMagick*.AppImage ./ImageMagick-xperimental-x86_64.AppImage
-  - cp ./ImageMagick-xperimental{,-$(git rev-parse --short HEAD)}-x86_64.AppImage
-  - sha512sum ./ImageMagick-xperimental-$(git rev-parse --short HEAD)-x86_64.AppImage > ./ImageMagick-xperimental-$(git rev-parse --short HEAD)-x86_64.AppImage.sha512
+  - cp ./ImageMagick-xperimental{,-$VERSION}-x86_64.AppImage
+  - sha512sum ./ImageMagick-xperimental-$VERSION-x86_64.AppImage > ./ImageMagick-xperimental-$VERSION-x86_64.AppImage.sha512
   - sha512sum ./ImageMagick-xperimental-x86_64.AppImage                               > ./ImageMagick-xperimental-x86_64.AppImage.sha512
   - #if [ "$TRAVIS_BRANCH" == "TRAVIS_TAG" ] ; then
   - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
   - bash upload.sh ImageMagick-xperimental-x86_64.AppImage
   - bash upload.sh ImageMagick-xperimental-x86_64.AppImage.sha512
-  - bash upload.sh ImageMagick-xperimental-$(git rev-parse --short HEAD)-x86_64.AppImage
-  - bash upload.sh ImageMagick-$(git rev-parse --short HEAD)-gcc-x86_64.AppImage.zsync
-  - bash upload.sh ImageMagick-xperimental-$(git rev-parse --short HEAD)-x86_64.AppImage.sha512
+  - bash upload.sh ImageMagick-xperimental-$VERSION-x86_64.AppImage
+  - bash upload.sh ImageMagick-$VERSION-gcc-x86_64.AppImage.zsync
+  - bash upload.sh ImageMagick-xperimental-$VERSION-x86_64.AppImage.sha512
   - #; fi
   - #if [ "$TRAVIS_BRANCH" != "TRAVIS_TAG" ] ; then
-  - curl --upload-file ./ImageMagick-xperimental-$(git rev-parse --short HEAD)-x86_64.AppImage  https://transfer.sh/ImageMagick-xperimental-$(git rev-parse --short HEAD)-x86_64.AppImage
-  - curl --upload-file ./ImageMagick-xperimental-x86_64.AppImage                                https://transfer.sh/ImageMagick-xperimental-x86_64.AppImage
+  - curl --upload-file ./ImageMagick-xperimental-$VERSION-x86_64.AppImage  https://transfer.sh/ImageMagick-xperimental-$VERSION-x86_64.AppImage
+  - curl --upload-file ./ImageMagick-xperimental-x86_64.AppImage           https://transfer.sh/ImageMagick-xperimental-x86_64.AppImage
   - #; fi
   - find . -name "ImageMagick-*.AppImage*"
 
