--- a/.travis.yml
+++ b/.travis.yml
@@ -53,8 +53,9 @@ script:
   - find appdir/ -type d
   - find . -name "*.xml"
   - find . -type d -name share
-  - cd appdir/usr/lib/ImageMagick-7.0.7/config-Q16HDRI ; ln -s ../../../etc/ImageMagick-7/*.xml . ; cd -
-  - cd appdir/usr/lib/ImageMagick-7.0.7/config-Q16HDRI ; ln -s ../../../share/ImageMagick-7/*.xml . ; cd -
+  - cd appdir/usr/lib/ImageMagick-7.0.7/config-Q16HDRI ; ls -l ../../../etc/ImageMagick-7/*.xml   ; ln -s ../../../etc/ImageMagick-7/*.xml .   ; cd -
+  - cd appdir/usr/lib/ImageMagick-7.0.7/config-Q16HDRI ; ls -l ../../../share/ImageMagick-7/*.xml ; ln -s ../../../share/ImageMagick-7/*.xml . ; cd -
+  - ls -l appdir/usr/lib/ImageMagick-7.0.7/config-Q16HDRI
   - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
   - chmod a+x linuxdeployqt*.AppImage
   - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
