--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ script:
   - mkdir -p appdir/usr/share/applications/ ; cp ./appimage/imagemagick.desktop ./appdir/usr/share/applications/
   - mkdir -p appdir/usr/share/icons/hicolor/512x512/apps/ ; cp ./appimage/imagemagick.png  ./appdir/usr/share/icons/hicolor/512x512/apps/
   - mkdir -p appdir/usr/share/metainfo/ ; cp ./appimage/imagemagick.appdata.xml  ./appdir/usr/share/metainfo/
+  - appstreamcli validate --verbose ./appimage/imagemagick.appdata.xml
   - ls -l appdir
   - readlink -f appdir
   - make install DESTDIR=$(readlink -f appdir)
@@ -59,7 +60,7 @@ script:
   - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
   - chmod a+x linuxdeployqt*.AppImage
   - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
-  - export VERSION=$(git rev-parse --short HEAD)-$CC
+  - export VERSION="git.$(git rev-parse --short HEAD)-$CC"
   - ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/imagemagick.desktop -bundle-non-qt-libs
   - ./linuxdeployqt*.AppImage --appimage-extract
   - ls -1d */
@@ -76,13 +77,14 @@ script:
   - cp ./ImageMagick-xperimental{,-$VERSION}-x86_64.AppImage
   - sha512sum ./ImageMagick-xperimental-$VERSION-x86_64.AppImage > ./ImageMagick-xperimental-$VERSION-x86_64.AppImage.sha512
   - sha512sum ./ImageMagick-xperimental-x86_64.AppImage                               > ./ImageMagick-xperimental-x86_64.AppImage.sha512
+  - IMVERSION=$(./ImageMagick-xperimental-x86_64.AppImage -version | grep ^Version: | awk '{print $3, $4, $6}' | sed 's# #-#g')
   - #if [ "$TRAVIS_BRANCH" == "TRAVIS_TAG" ] ; then
   - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
   - bash upload.sh ImageMagick-xperimental-x86_64.AppImage
   - bash upload.sh ImageMagick-xperimental-x86_64.AppImage.sha512
-  - bash upload.sh ImageMagick-xperimental-$VERSION-x86_64.AppImage
-  - bash upload.sh ImageMagick-$VERSION-gcc-x86_64.AppImage.zsync
-  - bash upload.sh ImageMagick-xperimental-$VERSION-x86_64.AppImage.sha512
+  - bash upload.sh ImageMagick-xperimental-$IMVERSION-$VERSION-x86_64.AppImage
+  - bash upload.sh ImageMagick-$IMVERSION-$VERSION-gcc-x86_64.AppImage.zsync
+  - bash upload.sh ImageMagick-xperimental-$IMVERSION-$VERSION-x86_64.AppImage.sha512
   - #; fi
   - #if [ "$TRAVIS_BRANCH" != "TRAVIS_TAG" ] ; then
   - curl --upload-file ./ImageMagick-xperimental-$VERSION-x86_64.AppImage  https://transfer.sh/ImageMagick-xperimental-$VERSION-x86_64.AppImage
